2009-03-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Main.sln: Remove libsteticui from windows build.

2009-03-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Main.sln: Fix solution config mapping for NRefactory. Fixes
	  Mac and Windows builds.

2009-03-10  Lluis Sanchez Gual  <lluis@novell.com>

	* monodevelop-core-addins.pc.in: Add MD.Debugger to the list,
	  since it is required by SourceEditor.

	* monodevelop.pc.in: Set GacPackage flag.

2009-03-10  Mike Krüger  <mkrueger@novell.com>

	* Main.sln: Updated nrefactory references.

2009-03-07  Michael Hutchinson  <mhutchinson@novell.com>

	* monodevelop-core-addins.pc.in: Add
	  MonoDevelop.SourceEditor2.dll.

2009-03-03  Lluis Sanchez Gual  <lluis@novell.com>

	* monodevelop.desktop: Added more application categories.

2009-02-26  Michael Hutchinson  <mhutchinson@novell.com>

	* Main.sln: Fix translation projects' GUIDs.

2009-02-25  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Add casts debugging to run-debug target.

2009-02-25  Michael Hutchinson  <mhutchinson@novell.com>

	* Main.sln: Remove unused name attribute.

2009-02-20  Michael Hutchinson  <mhutchinson@novell.com>

	* Main.sln: Update mappings.

2009-02-10  Michael Hutchinson  <mhutchinson@novell.com>

	* tests/test-projects/console-project/ConsoleProject.sln:
	* tests/test-projects/completion-db-test/CompletionDbTest.sln:
	* tests/test-projects/generated-console-project/TestSolution.sln:
	* tests/test-projects/test-configuration-merging/TestConfigurationMerging.sln:
	  Remove unnecessary attribute from solutions.

2009-02-09  Jonathan Pryor  <jpryor@novell.com>

	* docs/sources/monodevelop-extension-guide.source,
	  docs/sources/monodevelop-reference.source: Add a /monodoc/node 
	  element so that documentation is inserted under the appropriate
	  "MonoDevelop IDE" node (for current/recent monodoc installs).

2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>
