@@ -16,33 +16,33 @@ export PREFIX
 # Work around a bug in 'exec' in older versions of macosx
 OSX_VERSION=$(uname -r | cut -f1 -d.)
 if [ $OSX_VERSION -lt 9 ]; then  # If OSX version is 10.4
-   EXEC=""
+   MONO_EXEC="mono"
 else
-   EXEC="exec -a monodevelop"
+   MONO_EXEC="exec -a monodevelop mono"
 fi
 
 ## END MAC-SPECIFIC SETUP ##
-### Beyond this, all is from the Linux monodevelop.in, except the exec -a tweak
+### Beyond this, all is from the Linux monodevelop.in, except the PREFIX and MONO_EXEC tweak
+
+EXE_PATH="$PREFIX/lib/monodevelop/bin/MonoDevelop.exe"
 
 MD_FORCE_DEBUG=yes
-MD_REDIRECT_LOG="$HOME/.config/MonoDevelop/log"
+MD_REDIRECT_LOG="${XDG_CONFIG_HOME:-$HOME/.config}/MonoDevelop/log"
 
-ARGS=""
-
-for arg in $*; do 
-case x$arg in
+for arg in "$@"; do 
+case "x$arg" in
 	x--profile*)
-		MONO_OPTIONS="$MONO_OPTIONS $arg"
+		MONO_OPTIONS+=("$arg")
 		shift
 		;;
 	x--debug*)
 		export MONODEVELOP_DISPATCH_DEBUG=yes
 		unset MD_FORCE_DEBUG
-		MONO_OPTIONS="$MONO_OPTIONS $arg"
+		MONO_OPTIONS+=("$arg")
 		shift
 		;;
 	x--trace*)
-		MONO_OPTIONS="$MONO_OPTIONS $arg"
+		MONO_OPTIONS+=("$arg")
 		shift
 		;;
 	x--no-log)
@@ -54,25 +54,23 @@ case x$arg in
 		shift
 		;;
 	*)
-		ARGS="$ARGS $arg"
+		ARGS+=("$arg")
 		shift
 		;;
 esac		
 done
 
-if [ -n "$MONO_OPTIONS" ]; then
-	echo "** Running with Mono options: $MONO_OPTIONS **"
-fi
-
 if [ -z MD_FORCE_DEBUG ]; then
-	MONO_OPTIONS="$MONO_OPTIONS --debug"
+	MONO_OPTIONS+=("--debug")
 fi
 
-exec_args="mono $MONO_OPTIONS $PREFIX/lib/monodevelop/bin/MonoDevelop.exe $ARGS"
+if [ -n "${MONO_OPTIONS[0]}" ]; then
+	echo "** Running with Mono options: ${MONO_OPTIONS[@]} **"
+fi
 
 if [ -n "$MD_REDIRECT_LOG" ]; then
 	mkdir -p `dirname "$MD_REDIRECT_LOG"`
-	$EXEC $exec_args 2>&1 | tee "$MD_REDIRECT_LOG"
+	$MONO_EXEC "${MONO_OPTIONS[@]}" "$EXE_PATH" "${ARGS[@]}" 2>&1 | tee "$MD_REDIRECT_LOG"
 else
-	$EXEC $exec_args
+	$MONO_EXEC "${MONO_OPTIONS[@]}" "$EXE_PATH" "${ARGS[@]}"
 fi
