@@ -1,24 +1,26 @@
 #!/bin/bash
 
 #this script should be in $PREFIX/bin
-PREFIX="${0%%/mdtool}/.."
+PREFIX="${0%%/bin/mdtool}"
+MONO_EXEC="exec -a mdtool mono"
+EXE_PATH="$PREFIX/lib/monodevelop/bin/mdrun.exe"
 
 MD_FORCE_DEBUG=yes
 
-for arg in $*; do 
+for arg in "$@"; do 
 case x$arg in
 	x--profile*)
-		MONO_OPTIONS="$MONO_OPTIONS $arg"
+		MONO_OPTIONS+=("$arg")
 		shift
 		;;
 	x--debug*)
 		export MONODEVELOP_DISPATCH_DEBUG=yes
 		unset MD_FORCE_DEBUG
-		MONO_OPTIONS="$MONO_OPTIONS $arg"
+		MONO_OPTIONS+=("$arg")
 		shift
 		;;
 	x--trace*)
-		MONO_OPTIONS="$MONO_OPTIONS $arg"
+		MONO_OPTIONS+=("$arg")
 		shift
 		;;
 	x--no-debug)
@@ -26,21 +28,19 @@ case x$arg in
 		shift
 		;;
 	*)
-		ARGS="$ARGS $arg"
+		ARGS+=("$arg")
 		shift
 		;;
 esac		
 done
 
 if [ -z MD_FORCE_DEBUG ]; then
-	MONO_OPTIONS="$MONO_OPTIONS --debug"
+	MONO_OPTIONS+=("--debug")
 fi
 
-if [ -n "$MONO_OPTIONS" ]; then
-	echo "** Running with Mono options: $MONO_OPTIONS **"
+if [ -n "${MONO_OPTIONS[0]}" ]; then
+	echo "** Running with Mono options: ${MONO_OPTIONS[@]} **"
 fi
 
-exec_args="-a mdtool mono $MONO_OPTIONS $PREFIX/lib/monodevelop/bin/mdrun.exe $ARGS"
-
-exec $exec_args
+$MONO_EXEC "${MONO_OPTIONS[@]}" "$EXE_PATH" "${ARGS[@]}"
 
