@@ -1,10 +1,12 @@
 #!/bin/bash
 
 #this script should be in $PREFIX/bin
-PREFIX="${0%%/monodevelop}/.."
+PREFIX="${0%%/bin/monodevelop}"
+MONO_EXEC="exec -a monodevelop mono"
+EXE_PATH="$PREFIX/lib/monodevelop/bin/MonoDevelop.exe"
 
 MD_FORCE_DEBUG=yes
-MD_REDIRECT_LOG="$HOME/.config/MonoDevelop/log"
+MD_REDIRECT_LOG="${XDG_CONFIG_HOME:-$HOME/.config}/MonoDevelop/log"
 
 #############################
 ## BEGIN MOZILLA DETECTION ##
@@ -58,22 +60,20 @@ export MOZILLA_FIVE_HOME="$MOZILLA_HOME"
 ## END MOZILLA DETECTION ##
 ###########################
 
-ARGS=""
-
-for arg in $*; do 
-case x$arg in
+for arg in "$@"; do 
+case "x$arg" in
 	x--profile*)
-		MONO_OPTIONS="$MONO_OPTIONS $arg"
+		MONO_OPTIONS+=("$arg")
 		shift
 		;;
 	x--debug*)
 		export MONODEVELOP_DISPATCH_DEBUG=yes
 		unset MD_FORCE_DEBUG
-		MONO_OPTIONS="$MONO_OPTIONS $arg"
+		MONO_OPTIONS+=("$arg")
 		shift
 		;;
 	x--trace*)
-		MONO_OPTIONS="$MONO_OPTIONS $arg"
+		MONO_OPTIONS+=("$arg")
 		shift
 		;;
 	x--no-log)
@@ -85,25 +85,23 @@ case x$arg in
 		shift
 		;;
 	*)
-		ARGS="$ARGS $arg"
+		ARGS+=("$arg")
 		shift
 		;;
 esac		
 done
 
-if [ -n "$MONO_OPTIONS" ]; then
-	echo "** Running with Mono options: $MONO_OPTIONS **"
-fi
-
 if [ -z MD_FORCE_DEBUG ]; then
-	MONO_OPTIONS="$MONO_OPTIONS --debug"
+	MONO_OPTIONS+=("--debug")
 fi
 
-exec_args="-a monodevelop mono $MONO_OPTIONS $PREFIX/lib/monodevelop/bin/MonoDevelop.exe $ARGS"
+if [ -n "${MONO_OPTIONS[0]}" ]; then
+	echo "** Running with Mono options: ${MONO_OPTIONS[@]} **"
+fi
 
 if [ -n "$MD_REDIRECT_LOG" ]; then
 	mkdir -p `dirname "$MD_REDIRECT_LOG"`
-	exec $exec_args 2>&1 | tee "$MD_REDIRECT_LOG"
+	$MONO_EXEC "${MONO_OPTIONS[@]}" "$EXE_PATH" "${ARGS[@]}" 2>&1 | tee "$MD_REDIRECT_LOG"
 else
-	exec $exec_args
+	$MONO_EXEC "${MONO_OPTIONS[@]}" "$EXE_PATH" "${ARGS[@]}"
 fi
